fix: menu list
