# internal/health/transport/http/routes.go
@@ -1,0 +1,7 @@
+package healthhttp
+
+import "github.com/labstack/echo/v4"
+
+func RegisterHealthRoutes(api *echo.Group, h *HealthHandler) {
+	api.GET("/health", h.Health)
+}
