# internal/transport/response/response.go
@@ -38,6 +38,16 @@ func Success[T any](ctx echo.Context, data T, message string) error {
 	return ctx.JSON(http.StatusOK, resp)
 }
 
+func SuccessWithStatus[T any](ctx echo.Context, statusCode int, data T, message string) error {
+	setJSON(ctx)
+	resp := &ResponseDTO[T]{
+		Data:         data,
+		ResponseCode: strconv.Itoa(statusCode),
+		Message:      message,
+	}
+	return ctx.JSON(statusCode, resp)
+}
+
 func Error(ctx echo.Context, code int, msg string) error {
 	setJSON(ctx)
 	resp := &ResponseDTO[any]{
